Override resource name and version with the ones contained in the wgt file

--- a/wirecloud_plugin/package.json
+++ b/wirecloud_plugin/package.json
@@ -6,5 +6,6 @@
   "media_types": [
       "Mashable application component"
   ],
-  "formats": ["FILE", "URL"]
+  "formats": ["FILE", "URL"],
+  "overrides": ["NAME", "VERSION"]
 }
